questioning about returning to an older version

--- a/history.txt
+++ b/history.txt
@@ -2,3 +2,5 @@ let's talk about history!
 
 today we are gonna talk abou WWII, where Hitler was defeated
 by the USA, URSS, UK and others!
+
+okay thats fine but what about returning to an older version??
